dist_man1_MANS=

if BUILD_BITCOIND
  dist_man1_MANS+=tipstreamd.1
endif

if ENABLE_QT
  dist_man1_MANS+=tipstream-qt.1
endif

if BUILD_BITCOIN_CLI
  dist_man1_MANS+=tipstream-cli.1
endif

if BUILD_BITCOIN_TX
  dist_man1_MANS+=tipstream-tx.1
endif

if BUILD_BITCOIN_WALLET
  dist_man1_MANS+=tipstream-wallet.1
endif
